--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "preview": "nuxt preview"
   },
   "devDependencies": {
-    "nuxt": "3.0.0-rc.8",
+    "nuxt": "^3.0.0-rc.9",
     "nuxt-windicss": "^2.5.0",
     "sass": "^1.54.5"
   },
   "dependencies": {
     "@heroicons/vue": "^2.0.10",
+    "@nuxtjs-alt/auth": "^2.0.6",
+    "@nuxtjs-alt/axios": "^1.0.18",
     "@pinia/nuxt": "^0.4.1",
     "ui": "https://github.com/trevio-tech/ui-next"
   }
