--- a/package.json
+++ b/package.json
@@ -5,23 +5,24 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "ui": "yarn upgrade @trevio/ui"
+    "ui": "yarn upgrade @trevio/ui",
+    "tiptap": "yarn upgrade @trevio/tiptap"
   },
   "devDependencies": {
     "@nuxtjs/apollo": "^5.0.0-alpha.4",
-    "nuxt": "^3.0.0-rc.11",
-    "nuxt-windicss": "^2.5.0",
-    "sass": "^1.54.5"
+    "@nuxtjs/tailwindcss": "^6.1.3",
+    "nuxt": "^3.0.0",
+    "sass": "^1.56.1"
   },
   "dependencies": {
-    "@heroicons/vue": "^2.0.10",
-    "@nuxtjs-alt/auth": "^2.0.6",
-    "@nuxtjs-alt/axios": "^1.0.18",
+    "@heroicons/vue": "^2.0.13",
+    "@nuxtjs-alt/auth": "^2.1.4",
+    "@nuxtjs-alt/http": "^1.4.6",
     "@pinia/nuxt": "^0.4.1",
     "@trevio/tiptap": "https://github.com/trevio-tech/tiptap",
     "@trevio/ui": "https://github.com/trevio-tech/ui-next",
-    "@vuepic/vue-datepicker": "^3.4.7",
-    "vee-validate": "^4.5.8",
+    "@vuepic/vue-datepicker": "^3.5.3",
+    "vee-validate": "^4.7.3",
     "vuedraggable": "^4.1.0"
   },
   "peerDependencies": {}
