--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@nuxtjs/apollo": "^5.0.0-alpha.4",
     "@nuxtjs/tailwindcss": "^6.1.3",
+    "@tailwindcss/typography": "^0.5.8",
     "nuxt": "^3.0.0",
     "sass": "^1.56.1"
   },
