--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@pinia/nuxt": "^0.4.1",
     "@trevio/ui": "https://github.com/trevio-tech/ui-next",
     "@vuepic/vue-datepicker": "^3.5.3",
+    "lucide-vue-next": "^0.102.0",
     "vee-validate": "^4.7.3",
     "vuedraggable": "^4.1.0"
   },
