--- a/package.json
+++ b/package.json
@@ -4,11 +4,9 @@
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "ui": "yarn upgrade @trevio/ui"
+    "preview": "nuxt preview"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^6.1.3",
     "@tailwindcss/typography": "^0.5.8",
     "nuxt": "^3.0.0",
     "sass": "^1.56.1"
@@ -17,10 +15,12 @@
     "@heroicons/vue": "^2.0.13",
     "@nuxtjs-alt/auth": "^2.1.4",
     "@nuxtjs-alt/http": "^1.4.6",
+    "@nuxtjs/tailwindcss": "^6.1.3",
     "@pinia/nuxt": "^0.4.1",
-    "@trevio/ui": "https://github.com/trevio-tech/ui-next",
     "@vuepic/vue-datepicker": "^3.5.3",
+    "@vueuse/core": "^9.6.0",
     "lucide-vue-next": "^0.102.0",
+    "swiper": "^8.4.5",
     "vee-validate": "^4.7.3",
     "vuedraggable": "^4.1.0"
   },
