--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@pinia/nuxt": "^0.4.1",
     "@vuepic/vue-datepicker": "^3.5.3",
     "@vueuse/core": "^9.6.0",
+    "date-fns": "^2.29.3",
     "lucide-vue-next": "^0.102.0",
     "swiper": "^8.4.5",
     "vee-validate": "^4.7.3",
