--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.8",
+    "@types/fabric": "^4.5.15",
     "nuxt": "^3.0.0",
     "sass": "^1.56.1"
   },
@@ -20,6 +21,7 @@
     "@vuepic/vue-datepicker": "^3.5.3",
     "@vueuse/core": "^9.6.0",
     "date-fns": "^2.29.3",
+    "fabric": "^5.3.0",
     "lucide-vue-next": "^0.102.0",
     "swiper": "^8.4.5",
     "vee-validate": "^4.7.3",
