--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vueuse/core": "^9.6.0",
     "date-fns": "^2.29.3",
     "fabric": "^5.3.0",
+    "lottie-web": "^5.10.1",
     "lucide-vue-next": "^0.102.0",
     "swiper": "^8.4.5",
     "vee-validate": "^4.7.3",
