--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "fabric": "^5.3.0",
     "lottie-web": "^5.10.1",
     "lucide-vue-next": "^0.102.0",
+    "pinia": "^2.0.30",
     "swiper": "^8.4.5",
     "vee-validate": "^4.7.3",
     "vuedraggable": "^4.1.0"
