--- a/package.json
+++ b/package.json
@@ -7,25 +7,26 @@
     "preview": "nuxt preview"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.8",
+    "@tailwindcss/typography": "^0.5.9",
     "@types/fabric": "^4.5.15",
-    "nuxt": "^3.0.0",
-    "sass": "^1.56.1"
+    "nuxt": "^3.1.2",
+    "sass": "^1.58.0"
   },
   "dependencies": {
-    "@nuxtjs-alt/auth": "^2.1.4",
-    "@nuxtjs-alt/http": "^1.4.6",
-    "@nuxtjs/tailwindcss": "^6.1.3",
-    "@pinia/nuxt": "^0.4.1",
-    "@vuepic/vue-datepicker": "^3.5.3",
-    "@vueuse/core": "^9.6.0",
+    "@nuxt/kit": "^3.1.2",
+    "@nuxtjs-alt/auth": "^2.1.7",
+    "@nuxtjs-alt/http": "^1.5.4",
+    "@nuxtjs/tailwindcss": "^6.3.1",
+    "@pinia/nuxt": "^0.4.6",
+    "@vuepic/vue-datepicker": "^3.6.7",
+    "@vueuse/core": "^9.12.0",
     "date-fns": "^2.29.3",
     "fabric": "^5.3.0",
-    "lottie-web": "^5.10.1",
-    "lucide-vue-next": "^0.102.0",
+    "lottie-web": "^5.10.2",
+    "lucide-vue-next": "^0.112.0",
     "pinia": "^2.0.30",
-    "swiper": "^8.4.5",
-    "vee-validate": "^4.7.3",
+    "swiper": "^8.4.7",
+    "vee-validate": "^4.7.4",
     "vuedraggable": "^4.1.0"
   },
   "peerDependencies": {}
