--- a/package.json
+++ b/package.json
@@ -9,11 +9,9 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
     "@types/fabric": "^4.5.15",
-    "nuxt": "^3.1.2",
     "sass": "^1.58.0"
   },
   "dependencies": {
-    "@nuxt/kit": "^3.1.2",
     "@nuxtjs-alt/auth": "^2.1.7",
     "@nuxtjs-alt/http": "^1.5.4",
     "@nuxtjs/tailwindcss": "^6.3.1",
@@ -24,6 +22,7 @@
     "fabric": "^5.3.0",
     "lottie-web": "^5.10.2",
     "lucide-vue-next": "^0.112.0",
+    "nuxt": "npm:nuxt3@latest",
     "pinia": "^2.0.30",
     "swiper": "^8.4.7",
     "vee-validate": "^4.7.4",
