--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "preview": "nuxt preview"
   },
   "devDependencies": {
+    "@nuxt/kit": "^3.2.0",
     "@tailwindcss/typography": "^0.5.9",
     "@types/fabric": "^4.5.15",
     "sass": "^1.58.0"
