--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@vueuse/core": "^9.12.0",
     "date-fns": "^2.29.3",
     "fabric": "^5.3.0",
+    "graphql-tag": "^2.12.6",
     "lottie-web": "^5.10.2",
     "lucide-vue-next": "^0.112.0",
     "nuxt": "npm:nuxt3@latest",
