--- a/package.json
+++ b/package.json
@@ -13,18 +13,18 @@
     "sass": "^1.58.0"
   },
   "dependencies": {
-    "@nuxtjs-alt/auth": "^2.1.7",
-    "@nuxtjs-alt/http": "^1.5.4",
+    "@nuxt-alt/auth": "^2.3.3",
+    "@nuxt-alt/http": "^1.6.1",
     "@nuxtjs/tailwindcss": "^6.3.1",
     "@pinia/nuxt": "^0.4.6",
     "@vuepic/vue-datepicker": "^3.6.7",
     "@vueuse/core": "^9.12.0",
     "date-fns": "^2.29.3",
-    "fabric": "^5.3.0",
+    "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
     "lottie-web": "^5.10.2",
     "lucide-vue-next": "^0.112.0",
-    "nuxt": "npm:nuxt3@latest",
+    "nuxt": "^3.2.3",
     "pinia": "^2.0.30",
     "swiper": "^8.4.7",
     "vee-validate": "^4.7.4",
