--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "date-fns": "^2.29.3",
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
+    "lodash-es": "^4.17.21",
     "lottie-web": "^5.10.2",
     "lucide-vue-next": "^0.112.0",
     "nuxt": "^3.2.3",
