--- a/package.json
+++ b/package.json
@@ -7,28 +7,28 @@
     "preview": "nuxt preview"
   },
   "devDependencies": {
-    "@nuxt/kit": "^3.2.0",
     "@tailwindcss/typography": "^0.5.9",
-    "sass": "^1.58.0"
+    "sass": "^1.59.3"
   },
   "dependencies": {
-    "@nuxt-alt/auth": "^2.3.3",
+    "@nuxt-alt/auth": "^2.3.8",
     "@nuxt-alt/http": "^1.6.1",
-    "@nuxtjs/tailwindcss": "^6.3.1",
-    "@pinia/nuxt": "^0.4.6",
+    "@nuxtjs/tailwindcss": "^6.6.0",
+    "@pinia/nuxt": "^0.4.7",
     "@trevio-tech/ui": "latest",
-    "@vuepic/vue-datepicker": "^3.6.7",
-    "@vueuse/core": "^9.12.0",
+    "@trevio/ui": "https://github.com/trevio-tech/testui-3.git",
+    "@vuepic/vue-datepicker": "^4.2.1",
+    "@vueuse/core": "^10.0.0-beta.0",
     "date-fns": "^2.29.3",
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
     "lodash-es": "^4.17.21",
     "lottie-web": "^5.10.2",
-    "lucide-vue-next": "^0.112.0",
-    "nuxt": "^3.2.3",
-    "pinia": "^2.0.30",
-    "swiper": "^8.4.7",
-    "vee-validate": "^4.7.4",
+    "lucide-vue-next": "^0.125.0",
+    "nuxt": "^3.3.1",
+    "pinia": "^2.0.33",
+    "swiper": "^9.1.0",
+    "vee-validate": "^4.8.2",
     "vuedraggable": "^4.1.0"
   },
   "peerDependencies": {}
