--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,10 +15,9 @@ jobs:
       # Check out code
       - name: Checkout
         uses: actions/checkout@v3
-      # This is the separate action that sets up buildx runner
-      - uses: webfactory/ssh-agent@v0.7.0
         with:
-            ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+          persist-credentials: false
+      # This is the separate action that sets up buildx runner
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       # So now you can use Actions' own caching!
