--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,8 +15,8 @@ jobs:
       # Check out code
       - name: Checkout
         uses: actions/checkout@v3
-        with:
-          persist-credentials: false
+      - name: Reconfigure git to use HTTP authentication
+        run: git config --global url.https://${{ secrets.PAT }}@github.com/
       # This is the separate action that sets up buildx runner
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
