--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,7 @@
-API_URL=http://api.1243721-ct65224.tw1.ru/api
-GRAPHQL_URL=http://api.1243721-ct65224.tw1.ru/graphql
+API_URL=http://gql.1300956-ct65224.tw1.ru
+GRAPHQL_URL=http://gql.1300956-ct65224.tw1.ru/graphql
 WEBSOCKETS_APP_KEY=soketi
-WEBSOCKETS_HOST=api.1243721-ct65224.tw1.ru
+WEBSOCKETS_HOST=127.0.0.1:9000
 WEBSOCKETS_PORT=6001
-DOMAIN=http://1243721-ct65224.tw1.ru
-GIGET_AUTH=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
-
-# Layers
-BASE_LAYER="github:trevio-tech/nuxt-base-layer#master"
-HEAD_LAYER="github:trevio-tech/nuxt-head-layer#master"
+DOMAIN=http://1300956-ct65224.tw1.ru
+ENV=production
