--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "pinia": "^2.0.33",
     "swiper": "^9.1.0",
     "vee-validate": "^4.8.2",
+    "vue3-toastify": "^0.1.5",
     "vuedraggable": "^4.1.0"
   },
   "peerDependencies": {}
