--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "@nuxt-alt/http": "^1.6.1",
     "@nuxtjs/tailwindcss": "^6.6.0",
     "@pinia/nuxt": "^0.4.7",
-    "@trevio-tech/ui": "latest",
+    "@trevio-tech/ui": "^0.0.46",
     "@trevio/ui": "https://github.com/trevio-tech/testui-3.git",
     "@vuepic/vue-datepicker": "^4.2.1",
     "@vueuse/core": "^10.0.0-beta.0",
+    "colorthief": "^2.4.0",
     "date-fns": "^2.29.3",
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
