--- a/package.json
+++ b/package.json
@@ -8,29 +8,29 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
-    "sass": "^1.59.3"
+    "sass": "^1.60.0"
   },
   "dependencies": {
     "@nuxt-alt/auth": "^2.3.8",
     "@nuxt-alt/http": "^1.6.1",
-    "@nuxtjs/tailwindcss": "^6.6.0",
+    "@nuxtjs/tailwindcss": "6.6.0",
     "@pinia/nuxt": "^0.4.7",
-    "@trevio-tech/ui": "^0.0.46",
+    "@trevio-tech/ui": "^0.0.52",
     "@trevio/ui": "https://github.com/trevio-tech/testui-3.git",
-    "@vuepic/vue-datepicker": "^4.2.1",
-    "@vueuse/core": "^10.0.0-beta.0",
+    "@vuepic/vue-datepicker": "^4.2.3",
+    "@vueuse/core": "^10.0.0-beta.2",
     "colorthief": "^2.4.0",
     "date-fns": "^2.29.3",
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
     "lodash-es": "^4.17.21",
     "lottie-web": "^5.10.2",
-    "lucide-vue-next": "^0.125.0",
-    "nuxt": "^3.3.1",
+    "lucide-vue-next": "^0.128.0",
+    "nuxt": "^3.3.2",
     "pinia": "^2.0.33",
-    "swiper": "^9.1.0",
-    "vee-validate": "^4.8.2",
-    "vue3-toastify": "^0.1.5",
+    "swiper": "^9.1.1",
+    "vee-validate": "^4.8.4",
+    "vue3-toastify": "^0.1.6",
     "vuedraggable": "^4.1.0"
   },
   "peerDependencies": {}
