--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@nuxt-alt/auth": "^2.3.8",
     "@nuxt-alt/http": "^1.6.1",
-    "@nuxtjs/tailwindcss": "6.6.0",
+    "@nuxtjs/tailwindcss": "^6.6.5",
     "@pinia/nuxt": "^0.4.7",
     "@trevio-tech/ui": "^0.0.52",
     "@trevio/ui": "https://github.com/trevio-tech/testui-3.git",
