test new dockerfile

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
           context: .
           push: true
           tags: ghcr.io/trevio-tech/desktop-3:latest
-          build-args: ENV_FILE=${{ secrets.ENV_DESKTOP_3 }}
+          build-args: DOT_ENV=${{ secrets.DOT_ENV }}
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new
         # This ugly bit is necessary if you don't want your cache to grow forever
